--- a/src/index.css
+++ b/src/index.css
@@ -84,6 +84,7 @@ ul {
 #search-input {
   padding: 10px;
   width: 60%;
+  min-width: 300px;
   max-width: 800px;
   border-radius: 25px;
   border: 2px solid #ddd;
@@ -103,10 +104,11 @@ ul {
   gap: 80px;
   justify-content: center;
   padding: 20px;
+  /* width: 100%; */
 }
 
 #imagecart {
-  width: 280px;
+  width: 280px; 
   padding: 15px;
   border-radius: 10px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
@@ -128,7 +130,7 @@ ul {
 
 #productinfo p {
   margin: 5px 0;
-  font-size: 1rem;
+  font-size: 1rem; 
   font-weight: bold;
 }
 
@@ -225,4 +227,48 @@ ul {
 #footer-bottom p {
   margin: 0;
   color: #bbb;
+}
+
+
+
+/* css for single page */
+/* Container for the product page */
+#product-page {
+  background-color: white;
+  border-radius: 10px;
+  padding: 20px;
+  width: 500px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  margin: 50px auto; /* Center the container */
+}
+
+/* Title styling */
+#product-page h1 {
+  font-size: 28px;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+/* Image styling */
+#product-page img {
+  width: 100%;
+  max-width: 400px;
+  height: 450px;
+  border-radius: 8px;
+  margin-bottom: 20px;
+  transition: transform 0.3s ease;
+}
+
+/* Image hover effect */
+#product-page img:hover {
+  transform: scale(1.05);
+}
+
+/* Product title styling */
+#product-page p {
+  font-size: 18px;
+  color: #555;
+  margin-top: 10px;
+  font-weight: bold;
 }
